--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
                     <img src="image.jpg" alt="">
                 </div>
         </section>
+        <footer class="footer">
+            <ul class="list">
+                <li> <a href=index.html>Home</a> </li>
+                <li> <a href=quizzes.html>Quizzes</a> </li>
+                <li> <a href=quiz-managing.html>Manage</a> </li>
+                <li> <a href=settings.html>Settings</a> </li> 
+                <li> <a href=user-profile.html>Profile</a> </li>
+            </ul>
+            <p class="copyright">
+                @ Team GEH | All Rights Reserved
+            </p>
+        </footer>
         <script src="script.js"></script>
     </body>
 </html>
