--- a/user-profile.html
+++ b/user-profile.html
@@ -18,6 +18,18 @@
                 <a href=user-profile.html>Profile</a>
             </nav>
         </header>
+        <footer class="footer">
+            <ul class="list">
+                <li> <a href=index.html>Home</a> </li>
+                <li> <a href=quizzes.html>Quizzes</a> </li>
+                <li> <a href=quiz-managing.html>Manage</a> </li>
+                <li> <a href=settings.html>Settings</a> </li> 
+                <li> <a href=user-profile.html>Profile</a> </li>
+            </ul>
+            <p class="copyright">
+                @ Team GEH | All Rights Reserved
+            </p>
+        </footer>
         <script src="script.js"></script>
     </body>
 </html>
