--- a/error.html
+++ b/error.html
@@ -6,15 +6,20 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
+        <header class="header">
+            <a href="#home" class="logo"><span>TSU</span> Online Library</a>
+            <i class="bx bx-menu" id="menu-icon"></i>
+            <nav class="navbar">
+                <a href=index.html>Home</a>
+                <a href=Library.html>Library</a>
+                <a href=log-in-out.html>Log In</a>
+            </nav>
         </header>
         <footer class="footer">
             <ul class="list">
                 <li> <a href=index.html>Home</a> </li>
-                <li> <a href=quizzes.html>Quizzes</a> </li>
-                <li> <a href=quiz-managing.html>Manage</a> </li>
-                <li> <a href=settings.html>Settings</a> </li> 
-                <li> <a href=user-profile.html>Profile</a> </li>
+                <li> <a href=Library.html>Library</a> </li>
+                <li> <a href=log-in-out.html>Log In</a> </li>
             </ul>
             <p class="copyright">
                 @ Team GEH | All Rights Reserved
