--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
     </head>
     <body>
         <header class="header">
-            <a href="#home" class="logo">quiz<span>Repo</span></a>
+            <a href="#home" class="logo"><span>TSU</span> Online Library</a>
             <i class="bx bx-menu" id="menu-icon"></i>
             <nav class="navbar">
                 <a href=index.html>Home</a>
-                <a href=quizzes.html>Quizzes</a>
-                <a href=quiz-managing.html>Manage</a>
-                <a href=settings.html>Settings</a>
-                <a href=user-profile.html>Profile</a>
+                <a href=Library.html>Library</a>
+                <a href=log-in-out.html>Log In</a>
             </nav>
         </header>
         <section class="home" id="home">
@@ -34,10 +32,8 @@
         <footer class="footer">
             <ul class="list">
                 <li> <a href=index.html>Home</a> </li>
-                <li> <a href=quizzes.html>Quizzes</a> </li>
-                <li> <a href=quiz-managing.html>Manage</a> </li>
-                <li> <a href=settings.html>Settings</a> </li> 
-                <li> <a href=user-profile.html>Profile</a> </li>
+                <li> <a href=Library.html>Library</a> </li>
+                <li> <a href=log-in-out.html>Log In</a> </li>
             </ul>
             <p class="copyright">
                 @ Team GEH | All Rights Reserved
