--- a/log-in-out.html
+++ b/log-in-out.html
@@ -10,20 +10,13 @@
             <a href="#home" class="logo"><span>TSU</span> Online Library</a>
             <i class="bx bx-menu" id="menu-icon"></i>
             <nav class="navbar">
-                <a href=index.html>Home</a>
-                <a href=Library.html>Library</a>
-                <a href=log-in-out.html>Log In</a>
+                <a href=index.html> Home </a>
+                <a href=Library.html> Library </a>
+                <a href=log-in-out.html> Log In </a>
             </nav>
         </header>
         <footer class="footer">
-            <ul class="list">
-                <li> <a href=index.html>Home</a> </li>
-                <li> <a href=Library.html>Library</a> </li>
-                <li> <a href=log-in-out.html>Log In</a> </li>
-            </ul>
-            <p class="copyright">
-                @ Team GEH | All Rights Reserved
-            </p>
+            <p class="copyright"> @ Team GEH | All Rights Reserved </p>
         </footer>
         <script src="script.js"></script>
     </body>
