--- a/search.html
+++ b/search.html
@@ -2,19 +2,22 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1.0">
-        <title> Log In </title>
+        <title> Search </title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header class="header">
-            <a href="#home" class="logo"><span>TSU</span> Online Library</a>
+            <a href="#home" class="logo"> <span>TSU</span> Online Library</a>
             <i class="bx bx-menu" id="menu-icon"></i>
             <nav class="navbar">
-                <a href=index.html> Home </a>
-                <a href=Library.html> Library </a>
-                <a href=log-in-out.html> Log In </a>
+                <a href=index.html>Home</a>
+                <a href="#">Genre</a>
+                <a href=search.html class="active">Search</a>
+                <a href=account.html>Account</a>
             </nav>
         </header>
+        <section class="home" id="home">
+        </section>
         <footer class="footer">
             <p class="copyright"> @ Team GEH | All Rights Reserved </p>
         </footer>
