--- a/account.html
+++ b/account.html
@@ -2,25 +2,24 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1.0">
-        <title> Error </title>
+        <title> Account </title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header class="header">
-            <a href="#home" class="logo"><span>TSU</span> Online Library</a>
+            <a href="#home" class="logo"> <span>TSU</span> Online Library</a>
             <i class="bx bx-menu" id="menu-icon"></i>
             <nav class="navbar">
                 <a href=index.html>Home</a>
                 <a href="#">Genre</a>
                 <a href=search.html>Search</a>
-                <a href=account.html>Account</a>
+                <a href=account.html class="active">Account</a>
             </nav>
         </header>
-        
+        <section class="home" id="home">
+        </section>
         <footer class="footer">
-            <p class="copyright">
-                @ Team GEH | All Rights Reserved
-            </p>
+            <p class="copyright"> @ Team GEH | All Rights Reserved </p>
         </footer>
         <script src="script.js"></script>
     </body>
