--- a/index.html
+++ b/index.html
@@ -10,17 +10,24 @@
             <a href="#home" class="logo"> <span>TSU</span> Online Library</a>
             <i class="bx bx-menu" id="menu-icon"></i>
             <nav class="navbar">
-                <a href=index.html>Home</a>
-                <a href=Library.html>Library</a>
-                <a href=log-in-out.html>Log In</a>
+                <a href="#home" class="active">Home</a>
+                <a href="#">Genre</a>
+                <a href=search.html>Search</a>
+                <a href=account.html>Account</a>
             </nav>
         </header>
         <section class="home" id="home">
+            <section class="home-content">
+
+            </section>
+        </section>
+        <section class="library" id="library">
+            <section class="library-content">
+
+            </section>
         </section>
         <footer class="footer">
-            <p class="copyright">
-                @ Team GEH | All Rights Reserved
-            </p>
+            <p class="copyright"> @ Team GEH | All Rights Reserved </p>
         </footer>
         <script src="script.js"></script>
     </body>
