--- a/index.html
+++ b/index.html
@@ -8,23 +8,10 @@
     <body>
         <header class="header">
             <a href="#home" class="logo"> <span>TSU</span> Online Library</a>
-            <i class="bx bx-menu" id="menu-icon"></i>
-            <nav class="navbar">
-                <a href="#home" class="active">Home</a>
-                <a href="#">Genre</a>
-                <a href=search.html>Search</a>
-                <a href=account.html>Account</a>
-            </nav>
         </header>
-        <section class="home" id="home">
-            <section class="home-content">
-
-            </section>
-        </section>
-        <section class="library" id="library">
-            <section class="library-content">
-
-            </section>
+        <section class="log-in">
+            <br><br><br>
+            <a href=library.html class="keylogger">Eto muna click nyo</a>
         </section>
         <footer class="footer">
             <p class="copyright"> @ Team GEH | All Rights Reserved </p>
