--- a/library.html
+++ b/library.html
@@ -2,23 +2,28 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1.0">
-        <title> Search </title>
+        <title> Home </title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header class="header">
             <a href="#home" class="logo"> <span>TSU</span> Online Library</a>
-            <i class="bx bx-menu" id="menu-icon"></i>
             <nav class="navbar">
-                <a href=index.html>Home</a>
+                <a href="#home" class="active">Home</a>
                 <a href="#">Genre</a>
-                <a href=search.html class="active">Search</a>
+                <a href=search.html>Search</a>
                 <a href=account.html>Account</a>
+                <button type="button"><box-icon name='search-alt'></box-icon></button> 
             </nav>
         </header>
-        <section class="search" id="search">
-            <section class="search-content">
-                <
+        <section class="home" id="home">
+            <section class="home-content">
+
+            </section>
+        </section>
+        <section class="library" id="library">
+            <section class="library-content">
+
             </section>
         </section>
         <footer class="footer">
