adjustments + temp log in button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         </header>
         <section class="log-in">
             <br><br><br>
-            <a href=library.html class="keylogger">Eto muna click nyo</a>
+            <a href=library.html class="btn">Log In</a>
         </section>
         <footer class="footer">
             <p class="copyright"> @ Team GEH | All Rights Reserved </p>
