--- a/library.html
+++ b/library.html
@@ -13,6 +13,7 @@
                 <a href="#">Genre</a>
                 <a href=search.html>Search</a>
                 <a href=account.html>Account</a>
+                <a href=index.html>Log Out</a>
                 <button type="button"><box-icon name='search-alt'></box-icon></button> 
             </nav>
         </header>
