--- a/search.html
+++ b/search.html
@@ -10,10 +10,11 @@
             <a href="#home" class="logo"> <span>TSU</span> Online Library</a>
             <i class="bx bx-menu" id="menu-icon"></i>
             <nav class="navbar">
-                <a href=index.html>Home</a>
+                <a href=library.html>Home</a>
                 <a href="#">Genre</a>
                 <a href=search.html class="active">Search</a>
                 <a href=account.html>Account</a>
+                <a href=index.html>Log Out</a>
             </nav>
         </header>
         <section class="search" id="search">
