--- a/error.html
+++ b/error.html
@@ -14,6 +14,7 @@
                 <a href="#">Genre</a>
                 <a href=search.html>Search</a>
                 <a href=account.html>Account</a>
+                <a href=index.html>Log Out</a>
             </nav>
         </header>
         
