--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
         <header class="header">
             <a href="#home" class="logo"> <span>TSU</span> Online Library</a>
         </header>
+
         <section class="log-in">
             <br><br><br>
-            <a href=library.html class="btn">Log In</a>
+            <div class="input-box">
+                <input type="email" placeholder="Email">
+                <input type="text" class="password" placeholder="Password">
+                <a href=library.html class="btn">Log In</a>
+            </div>
         </section>
+
         <footer class="footer">
             <p class="copyright"> @ Team GEH | All Rights Reserved </p>
         </footer>
