--- a/library.html
+++ b/library.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header class="header">
-            <a href="#home" class="logo"> <span>TSU</span> Online Library</a>
+            <a href="#home" class="logo"> <img src="tsu-seal.png"> <span> TSU </span> Online Library</a>
             <nav class="navbar">
                 <a href="#home" class="active">Home</a>
                 <a href="#">Genre</a>
