--- a/account.html
+++ b/account.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header class="header">
-            <a href="#home" class="logo"> <span>TSU</span> Online Library</a>
+            <a href="#home" class="logo"> <img src="tsu-seal.png"> <span> TSU </span> Online Library</a>
             <i class="bx bx-menu" id="menu-icon"></i>
             <nav class="navbar">
                 <a href=library.html>Home</a>
