footer estetik improv

--- a/error.html
+++ b/error.html
@@ -19,9 +19,7 @@
         </header>
         
         <footer class="footer">
-            <p class="copyright">
-                @ Team GEH | All Rights Reserved
-            </p>
+            <p class="copyright"> <span>@Team GEH</span> | All Rights Reserved </p>
         </footer>
         <script src="script.js"></script>
     </body>
