--- a/account.html
+++ b/account.html
@@ -20,7 +20,7 @@
         <section class="home" id="home">
         </section>
         <footer class="footer">
-            <p class="copyright"> @ Team GEH | All Rights Reserved </p>
+            <p class="copyright"> <span>@Team GEH</span> | All Rights Reserved </p>
         </footer>
         <script src="script.js"></script>
     </body>
