--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </section>
 
         <footer class="footer">
-            <p class="copyright"> @ Team GEH | All Rights Reserved </p>
+            <p class="copyright"> <span>@Team GEH</span> | All Rights Reserved </p>
         </footer>
         <script src="script.js"></script>
     </body>
