--- a/search.html
+++ b/search.html
@@ -23,7 +23,7 @@
             </section>
         </section>
         <footer class="footer">
-            <p class="copyright"> @ Team GEH | All Rights Reserved </p>
+            <p class="copyright"> <span>@Team GEH</span> | All Rights Reserved </p>
         </footer>
         <script src="script.js"></script>
     </body>
