--- a/library.html
+++ b/library.html
@@ -9,17 +9,18 @@
     <body>
         <header class="header">
             <a href="#home" class="logo"> <img src="tsu-seal.png"> <span> TSU </span> Online Library</a>
-            <nav class="navbar">
-                <a href="#home" class="active">Home</a>
-                <a href="#">Genre</a>
-                <a href=search.html>Search</a>
-                <a href=account.html>Account</a>
-                <a href=index.html>Log Out</a>
-                <button type="button"><box-icon name='search-alt'></box-icon></button> 
-            </nav>
-            <div class="search-bar">
-                <input class="Input" type="text" placeholder="Search..." name=""/>
-                <i class='bx bx-search-alt'></i>
+            <div class="nav-container">
+                <nav class="navbar">
+                    <a href="#home" class="active">Home</a>
+                    <a href="#">Genre</a>
+                    <a href=account.html>Account</a>
+                    <a href=index.html>Log Out</a>
+                    <button type="button"><box-icon name='search-alt'></box-icon></button> 
+                </nav>
+                <div class="search-bar">
+                    <input class="Input" type="text" placeholder="Search..." name=""/>
+                    <i class='bx bx-search-alt'></i>
+                </div>
             </div>
         </header>
         <section class="home" id="home">
