--- a/account.html
+++ b/account.html
@@ -11,9 +11,9 @@
             <a href="#home" class="logo"> <img src="tsu-seal.png"> <span> TSU </span> Online Library</a>
             <div class="nav-container">
                 <nav class="navbar">
-                    <a href="#home" class="active">Home</a>
+                    <a href=library.html>Home</a>
                     <a href="#">Genre</a>
-                    <a href=account.html>Account</a>
+                    <a href=account.html class="active">Account</a>
                     <a href=index.html>Log Out</a>
                     <button type="button"><box-icon name='search-alt'></box-icon></button> 
                 </nav>
