--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
     </head>
     <body>
         <header class="header">
-            <a href="#home" class="logo"> <img src="tsu-seal.png"> <span>TSU</span> Online Library</a>
+            <a class="logo"> <img src="tsu-seal.png"> <span>TSU</span> Online Library</a>
         </header>
 
         <section class="log-in">
-            <br><br><br>
-            <div class="input-box">
-                <input type="email" placeholder="Email">
-                <input type="text" class="password" placeholder="Password">
-                <a href=library.html class="btn">Log In</a>
-            </div>
+            <form>
+                <div class="input-box">
+                    <!-- Right now the log in only requires for the user to input any value
+                      and it will enable the log in button and will takle the user to the library.html page-->
+                    <input type="email" id="email" placeholder="Email" required>
+                    <input type="password" id="password" placeholder="Password" required>
+                    <button class="btn" id="login-btn" disabled>Log In</button>
+                </div>
+            </form>
+            <a href=library.html class="btn">Click here to bypass</a>
         </section>
 
         <footer class="footer">
