log in page final?

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 
         <section class="log-in">
             <form>
+                <div class="img-container">
+                    <div class="img">
+                        <img src="YellowCat.jpg" alt="Cat Image">
+                    </div>
+                    <a href="library.html" class="btn bypass-btn">Click here to bypass</a>
+                </div>
                 <div class="input-box">
                     <!-- Right now the log in only requires for the user to input any value
                       and it will enable the log in button and will takle the user to the library.html page-->
@@ -20,7 +26,7 @@
                     <button class="btn" id="login-btn" disabled>Log In</button>
                 </div>
             </form>
-            <a href=library.html class="btn">Click here to bypass</a>
+            
         </section>
 
         <footer class="footer">
