--- a/TheArtofWar.html
+++ b/TheArtofWar.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>The Art of War</title>
+        <link rel="icon" type="image/x-icon" href="tsu-seal.png">
         <style>
             main{
                 width: 100vw;
