--- a/ReadTAOW.html
+++ b/ReadTAOW.html
@@ -9,7 +9,7 @@
             }
 
             embed{
-                width: 100vw;
+                width: 100%;
                 height: 100vh;
             }
         </style>
