--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
         <header class="header">
             <a class="logo"> <img src="tsu-seal.png"> <span>TSU</span> Online Library</a>
         </header>
-
         <section class="log-in">
             <form>
                 <div class="img-container">
                     <div class="login-wrapper">
                         <div class="img">
                             <img src="YellowCat.jpg" alt="Cat Image">
-                            <a href="library.html" class="btn bypass-btn">Click here to bypass</a>
+                            <a href="library.html" class="btn bypass-btn">Guest Log In</a>
                         </div>
                         <div class="input-box">
                             <!-- Right now the log in only requires for the user to input any value
@@ -28,9 +27,7 @@
                         </div>
                     </div>
             </form>
-            
         </section>
-
         <footer class="footer">
             <p class="copyright"> <span>@Team GEH</span> | All Rights Reserved </p>
         </footer>
