Made a specific folder for images for better coding practice while fixing what I hit

--- a/TheArtofWar.html
+++ b/TheArtofWar.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>The Art of War</title>
-        <link rel="icon" type="image/x-icon" href="tsu-seal.png">
+        <link rel="icon" type="image/x-icon" href="images/tsu-seal.png">
         <style>
             main{
                 width: 100vw;
@@ -125,7 +125,7 @@
     <body>
         <main>
             <div class="TAOW-photo-bg">
-                <img src="Book Covers/The Art of War Front Cover.jpg">
+                <img src="images/Book Covers/The Art of War Front Cover.jpg">
             </div>
             <div class="TAOW-description">
                 <p><b class="book-title">The Art of War</b><br><b class="author">By: Sun Tzu</b></p>
@@ -139,7 +139,7 @@
                 </div>
 
                 <div class="back">
-                    <p><b>Back</b></p>
+                    <p><b><a href=library.html style="text-decoration: none; color: var(--bg-color);">Back</a></b></p>
                 </div>
             </div>
         </main>
