--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1.0">
         <title> Log In </title>
-        <link rel="icon" type="image/x-icon" href="tsu-seal.png">
+        <link rel="icon" type="image/x-icon" href="images/tsu-seal.png">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header class="header">
-            <a class="logo"> <img src="tsu-seal.png"> <span>TSU</span> Online Library</a>
+            <a class="logo"> <img src="images/tsu-seal.png"> <span>TSU</span> Online Library</a>
         </header>
         <section class="log-in">
             <form>
                 <div class="img-container">
                     <div class="login-wrapper">
                         <div class="img">
-                            <img src="YellowCat.jpg" alt="Cat Image">
+                            <img src="images/YellowCat.jpg" alt="Cat Image">
                             <a href="library.html" class="btn bypass-btn">Guest Log In</a>
                         </div>
                         <div class="input-box">
