--- a/error.html
+++ b/error.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1.0">
         <title> Error </title>
-        <link rel="icon" type="image/x-icon" href="tsu-seal.png">
+        <link rel="icon" type="image/x-icon" href="images/tsu-seal.png">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
     </head>
     <body>
         <header class="header">
-            <a href="#home" class="logo"> <img src="tsu-seal.png"> <span> TSU </span> Online Library</a>
+            <a href="#home" class="logo"> <img src="images/tsu-seal.png"> <span> TSU </span> Online Library</a>
             <i class="bx bx-menu" id="menu-icon"></i>
             <nav class="navbar">
                 <a href=index.html>Home</a>
