--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
                             <a href="library.html" class="btn bypass-btn">Guest Log In</a>
                         </div>
                         <div class="input-box">
+                            <h1 class="log-header"> Sign In </h1>
                             <!-- Right now the log in only requires for the user to input any value
                             and it will enable the log in button and will takle the user to the library.html page-->
                             <input type="email" id="email" placeholder="Email" required>
                             <input type="password" id="password" placeholder="Password" required>
-                            <button class="btn" id="login-btn" disabled>Log In</button>
+                            <button class="btn" id="login-btn" disabled>Sign In</button>
                         </div>
                     </div>
             </form>
