--- a/TheArtofWar.html
+++ b/TheArtofWar.html
@@ -156,11 +156,11 @@
 
                 <div class="buttons">
                     <div class="read">
-                        <p><b>Read</b></p>
+                        <a href=ReadTAOW.html style="text-decoration: none; color: var(--bg-color);"><b>Read</b></a>
                     </div>
     
                     <div class="back">
-                        <p><b><a href=library.html style="text-decoration: none; color: var(--bg-color);">Back</a></b></p>
+                        <a href=library.html style="text-decoration: none; color: var(--bg-color);"><b>Back</b></a>
                     </div>
                 </div>
             </div>
