--- a/ReadTAOW.html
+++ b/ReadTAOW.html
@@ -15,6 +15,6 @@
         </style>
     </head>
     <body>
-        <embed src="Books/The_Art_Of_War.pdf">
+        <embed src="books/The_Art_Of_War.pdf">
     </body>
 </html>
