error page content

--- a/error.html
+++ b/error.html
@@ -10,17 +10,22 @@
     <body>
         <header class="header">
             <a href="#home" class="logo"> <img src="images/tsu-seal.png"> <span> TSU </span> Online Library</a>
-            <i class="bx bx-menu" id="menu-icon"></i>
-            <nav class="navbar">
-                <a href=index.html>Home</a>
-                <a href="#">Genre</a>
-                <a href=index.html>Log Out</a>
-            </nav>
-            <div class="search-bar">
-                <input class="Input" type="text" placeholder="Search..." name="" required=""/>
-                <i class='bx bx-search-alt'></i>
+            <div class="nav-container">
+                <nav class="navbar">
+                    <a href=library.html class="active">Home</a>
+                    <a href="#">Genre</a>
+                    <a href=index.html>Log Out</a>
+                    <button type="button"><box-icon name='search-alt'></box-icon></button> 
+                </nav>
+                <div class="search-bar">
+                    <input class="Input" type="text" placeholder="Search..." name=""/>
+                    <i class='bx bx-search-alt'></i>
+                </div>
             </div>
         </header>
+        <section class="error">
+            <h1 class="error-text"> Error 404 </h1>
+        </section>
         <footer class="footer">
             <p class="copyright"> <span>@Team GEH</span> | All Rights Reserved </p>
         </footer>
