Two books added

--- a/TheArtofWar.html
+++ b/TheArtofWar.html
@@ -156,7 +156,7 @@
 
                 <div class="buttons">
                     <div class="read">
-                        <a href=ReadTAOW.html style="text-decoration: none; color: var(--bg-color);"><b>Read</b></a>
+                        <a href="html-books/ReadTAOW.html" style="text-decoration: none; color: var(--bg-color);"><b>Read</b></a>
                     </div>
     
                     <div class="back">
