genre to catalog navbar

--- a/error.html
+++ b/error.html
@@ -12,8 +12,8 @@
             <a href="#home" class="logo"> <img src="images/tsu-seal.png"> <span> TSU </span> Online Library</a>
             <div class="nav-container">
                 <nav class="navbar">
-                    <a href=library.html class="active">Home</a>
-                    <a href="#">Genre</a>
+                    <a href=library.html>Home</a>
+                    <a href="#">Catalog</a>
                     <a href=index.html>Log Out</a>
                     <button type="button"><box-icon name='search-alt'></box-icon></button> 
                 </nav>
