--- a/library.html
+++ b/library.html
@@ -13,7 +13,7 @@
             <div class="nav-container">
                 <nav class="navbar">
                     <a href="#home" class="active">Home</a>
-                    <a href="#">Genre</a>
+                    <a href="#">Catalog</a>
                     <a href=index.html>Log Out</a>
                     <button type="button"><box-icon name='search-alt'></box-icon></button> 
                 </nav>
