--- a/error.html
+++ b/error.html
@@ -13,7 +13,13 @@
             <div class="nav-container">
                 <nav class="navbar">
                     <a href=library.html>Home</a>
-                    <a href="#">Catalog</a>
+                    <div class="drop-down">
+                        <a href="#">Catalog ▼</a>
+                        <ul class="dropdown">
+                            <li><a href="#popular">Popular</a></li>
+                            <li><a href="#thesis">Thesis</a></li>
+                        </ul>
+                    </div>
                     <a href=index.html>Log Out</a>
                     <button type="button"><box-icon name='search-alt'></box-icon></button> 
                 </nav>
