--- a/books-chosen/TheArtofWar.html
+++ b/books-chosen/TheArtofWar.html
@@ -10,7 +10,7 @@
         <main>
             <!--Book Cover-->
             <div class="photo-bg">
-                <img src="images/Book Covers/The Art of War Front Cover.jpg">
+                <img src="../images/Book Covers/The Art of War Front Cover.jpg">
             </div>
             <!--Book Information-->
             <div class="description">
@@ -27,12 +27,12 @@
                 <div class="buttons">
                     <!--Read-->
                     <div class="read">
-                        <a href="html-books/ReadTAOW.html" style="text-decoration: none; color: var(--bg-color);"><b>Read</b></a>
+                        <a href="../html-books/ReadTAOW.html" style="text-decoration: none; color: var(--bg-color);"><b>Read</b></a>
                     </div>
     
                     <!--Back-->
                     <div class="back">
-                        <a href=library.html style="text-decoration: none; color: var(--bg-color);"><b>Back</b></a>
+                        <a href="../library.html" style="text-decoration: none; color: var(--bg-color);"><b>Back</b></a>
                     </div>
                 </div>
             </div>
