--- a/library.html
+++ b/library.html
@@ -34,13 +34,19 @@
             <br>
             <div class="container">
             <figure>
-                <img src=>
+                <a href="TheArtofWar.html" target="_self">
+                    <img src="images/Book Covers/The Art of War Front Cover.jpg">
+                </a>
             </figure>
             <figure>
-                <img src=>
+                <a href="Noli.html" target="_self">
+                    <img src="images/Book Covers/The Social Cancer Front Cover.png">
+                </a>
             </figure>
             <figure>
-                <img src=>
+                <a href="JuliaDS.html" target="_self">
+                    <img src="images/Book Covers/Julia Front Cover.png">
+                </a>
             </figure>
             <figure>
                 <img src=>
