yan muna, habang inaayos ko mga natamaan

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header class="header">
-            <a class="logo"> <img src="images/tsu-seal.png"> <span>TSU</span> Online Library</a>
+            <a class="logo"> <img src="images/tsu-seal.png" class="logo"> <span>TSU</span> Online Library</a>
         </header>
         <section class="log-in">
             <form>
