--- a/library.html
+++ b/library.html
@@ -14,13 +14,13 @@
                 <nav class="navbar">
                     <a href="#home" class="active">Home</a>
                     <div class="drop-down">
-                        <a href="#">Catalog ▼</a>
+                        <a href="#">Catalog</a>
                         <ul class="dropdown">
                             <li><a href="#popular">Popular</a></li>
                             <li><a href="#thesis">Thesis</a></li>
                         </ul>
                     </div>
-                    <a href=index.html>Log Out</a>
+                    <a href=index.html>LogOut</a>
                     <button type="button"><box-icon name='search-alt'></box-icon></button> 
                 </nav>
                 <div class="search-bar">
