--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
             <form>
                 <div class="img-container">
                     <div class="login-wrapper">
-                        <div class="img">
-                            <img src="images/YellowCat.jpg" alt="Cat Image">
-                            <a href="library.html" class="btn bypass-btn">Guest Log In</a>
-                        </div>
                         <div class="input-box">
                             <h1 class="log-header"> Sign In </h1>
                             <!-- Right now the log in only requires for the user to input any value
@@ -25,6 +21,7 @@
                             <input type="email" id="email" placeholder="Email" required>
                             <input type="password" id="password" placeholder="Password" required>
                             <button class="btn" id="login-btn" disabled>Sign In</button>
+                            <a href="library.html" class="btn bypass-btn guest-log-in">Guest Log In</a>
                         </div>
                     </div>
             </form>
