--- a/error.html
+++ b/error.html
@@ -14,7 +14,7 @@
                 <nav class="navbar">
                     <a href=library.html>Home</a>
                     <div class="drop-down">
-                        <a href="#">Catalog ▼</a>
+                        <a href="#">Catalog</a>
                         <ul class="dropdown">
                             <li><a href="#popular">Popular</a></li>
                             <li><a href="#thesis">Thesis</a></li>
