--- a/TheArtofWar.html
+++ b/TheArtofWar.html
@@ -12,7 +12,7 @@
             }
 
             .photo-bg{
-                background-color: #881718;
+                background-color: #C10206;
                 flex: 2;
                 display: flex;
                 flex-direction: column;
@@ -72,7 +72,7 @@
             .read{
                 width: 120px;
                 height: 50px;
-                background-color: #881718;
+                background-color: #C10206;
                 border-radius: 50px;
 
                 font-size: large;
@@ -112,7 +112,7 @@
                 margin-left: 10px;
                 margin-bottom: 15px;
                 text-align: center;
-                color: #881718;
+                color: #C10206;
 
                 /* Centers vertically. */
                 display: flex;
