--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <video  autoplay muted loop>
+           <source src="Books background video.mp4">
+        </video>
         <header class="header">
             <a class="logo"> <img src="images/tsu-seal.png" class="logo"> <span>TSU</span> Online Library</a>
         </header>
