--- a/library.html
+++ b/library.html
@@ -68,28 +68,28 @@
         <br>
             <div class="container">
                 <figure>
-                    <img src=>
+                    <img src="images/Thesis Covers/Thesis 1.png">
                 </figure>
                 <figure>
-                    <img src=>
+                    <img src="images/Thesis Covers/Thesis 2.png">
                 </figure>
                 <figure>
-                    <img src=>
+                    <img src="images/Thesis Covers/Thesis 3.png">
                 </figure>
                 <figure>
-                    <img src=>
+                    <img src="images/Thesis Covers/Thesis 4.png">
                 </figure>
                 <figure>
-                    <img src=>
+                    <img src="images/Thesis Covers/Thesis 5.png">
                 </figure>
                 <figure>
-                    <img src=>
+                    <img src="images/Thesis Covers/Thesis 6.png">
                 </figure>
                 <figure>
-                    <img src=>
+                    <img src="images/Thesis Covers/Thesis 7.png">
                 </figure>
                 <figure>
-                    <img src=>
+                    <img src="images/Thesis Covers/Thesis 8.png">
                 </figure>
              </div>
         </section>
