--- a/library.html
+++ b/library.html
@@ -49,19 +49,19 @@
                 </a>
             </figure>
             <figure>
-                <img src=>
+                <img src="images/Book Covers/El Fili.jpg">
             </figure>
             <figure>
-                <img src=>
+                <img src="images/Book Covers/Hunger Games.jpg">
             </figure>
             <figure>
-                <img src=>
+                <img src="images/Book Covers/Meditations.jpg">
             </figure>
             <figure>
-                <img src=>
+                <img src="images/Book Covers/Philosopher's Stone.jpg">
             </figure>
             <figure>
-                <img src=>
+                <img src="images/Book Covers/Sapiens.jpg">
             </figure>
         </div>
         <h2 id="thesis">Thesis</h2>
