--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
            <source src="Books background video.mp4">
         </video>
         <header class="header">
-            <a class="logo"> <img src="images/tsu-seal.png" class="logo"> <span>TSU</span> Online Library</a>
+            <a class="logo"> <img src="images/tsu-seal.png"> <span>TSU</span> Online Library</a>
         </header>
         <section class="log-in">
             <form>
