Phone screen fixed

--- a/library.html
+++ b/library.html
@@ -34,17 +34,17 @@
             <br>
             <div class="container">
             <figure>
-                <a href="TheArtofWar.html" target="_self">
+                <a href="books-chosen/TheArtofWar.html" target="_self">
                     <img src="images/Book Covers/The Art of War Front Cover.jpg">
                 </a>
             </figure>
             <figure>
-                <a href="Noli.html" target="_self">
+                <a href="books-chosen/Noli.html" target="_self">
                     <img src="images/Book Covers/The Social Cancer Front Cover.png">
                 </a>
             </figure>
             <figure>
-                <a href="JuliaDS.html" target="_self">
+                <a href="books-chosen/JuliaDS.html" target="_self">
                     <img src="images/Book Covers/Julia Front Cover.png">
                 </a>
             </figure>
